@@ -1,3 +1,7 @@
+2008-12-08  Thomas Schwinge  <tschwinge@gnu.org>
+
+	* Makefile (HURDLIBS): Add shouldbeinlibc.
+
 2002-11-01  Roland McGrath  <roland@frob.com>
 
 	* shared.c (iohelp_fetch_shared_data, iohelp_put_shared_data): Put
